<resources>
    <string name="app_name">Exe River Sports</string>
    <string name="home">Home</string>
    <string name="btnHome">Home</string>
    <string name="welcome_to_ers">Welcome to ERS</string>
    <string name="press_enter_to_continue">Press Enter to continue!</string>
    <string name="welcome">Welcome</string>
    <string name="sports">Sports</string>
    <string name="match_arsenal_vs_tottenham" />
    <string name="select_ticket" />
    <string name="whatever_this_is">Whatever this is</string>
    <string name="sign_up">Sign Up</string>
    <string name="ers">ERS</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="arsenal_vs_tottenahm">Arsenal VS Tottenahm</string>
    <string name="premium_ticket">Premium Ticket</string>
    <string name="childs_ticket">Childs Ticket</string>
    <string name="_25_00">£25.00</string>
    <string name="_50_00">£50.00</string>

    <string-array name="ticket_quantity_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="ticket_quantity_array_Adult">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="ticket_quantity_array_Child">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_main_cricket">MainActivityCricket</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="adult_ticket_options">
        <item>Standard Adult Ticket</item>
        <item>Adult Ticket with Pie and Beer</item>
    </string-array>


</resources>