<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFB6D1"
    tools:context=".MainActivityTicketOrder">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:text="@string/ers"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHome"
        android:textStyle="bold"
        android:textColor="#F1EFEF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_tickets"
        android:textStyle="bold"
        android:textColor="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="400dp"
        android:layout_height="267dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="#1E88E5"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">


        <TextView
            android:id="@+id/adult_ticket_price"
            android:layout_width="226dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:text="@string/_50_00"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />

        <TextView
            android:id="@+id/child_ticket_price"
            android:layout_width="222dp"
            android:layout_height="42dp"
            android:text="@string/_25_00"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/adult_ticket_price"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/adult_ticket_price"
            app:layout_constraintTop_toBottomOf="@id/adult_ticket_price"
            app:layout_constraintVertical_bias="0.433" />

        <Spinner
            android:id="@+id/spinnerAdult"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:background="#9562C5"
            android:entries="@array/ticket_quantity_options"
            android:minHeight="48dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361" />

        <Spinner
            android:id="@+id/spinnerChild"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:background="#9562C5"
            android:entries="@array/ticket_quantity_array_Child"
            android:minHeight="48dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinnerAdult"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAdult"
            app:layout_constraintVertical_bias="0.34" />

        <Button
            android:id="@+id/btnPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order"
            android:textColor="#81D4FA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="280dp"
            android:layout_height="42dp"
            android:fontFamily="sans-serif-medium"
            android:text="Arsenal vs Tottenham"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.067" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="134dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.364" />




</androidx.constraintlayout.widget.ConstraintLayout>